# gosh

./: .gitignore  .travis.yml  BUILD  README.md  WORKSPACE  go.mod  go.sum
cmd/: BUILD  BUILD.bazel  smallsh.go
smallsh/: BUILD  BUILD.bazel
src/cmd/: BUILD.bazel  gosh.go  gosh_test.go  smallsh.go
src/gosh/: BUILD.bazel  cd.go  cd_test.go  exec.go  exec_test.go  gosh.go  gosh_test.go  status.go  status_test.go  test_helpers.go
src/smallsh/: BUILD.bazel  cd.go  cd_test.go  smallsh.go  smallsh_test.go
