load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["smallsh.go"],
    importpath = "github.com/nathanperkins/smallsh-go/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//smallsh:go_default_library",
        "@github_com_sirupsen_logsrus//:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
