load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["gosh.go"],
    importpath = "github.com/nathanperkins/gosh/src/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//src/gosh:go_default_library",
        "@com_github_sirupsen_logsrus//:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
