load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cd.go",
        "gosh.go",
    ],
    importpath = "github.com/nathanperkins/gosh/src/gosh",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logsrus//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "cd_test.go",
        "gosh_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
)
