load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cd.go",
        "gosh.go",
        "status.go",
        "test_helpers.go",
    ],
    importpath = "github.com/nathanperkins/gosh/src/gosh",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "cd_test.go",
        "gosh_test.go",
        "status_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
)
